# marimo-sphinx

./: .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  index.rst
marimo_sphinx/: __init__.py  _docstring.py  directives.py  nodes.py
marimo_sphinx/_static/: marimo_sphinx.css  marimo_sphinx.js
tests/: test_extension.py
