[project]
name = "marimo-sphinx"
version = "0.1.0"
description = "A Sphinx extension to embed interactive Marimo notebooks in API documentation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tetsuo Koyama", email = "tkoyama010@gmail.com" }]
keywords = ["sphinx", "marimo", "documentation", "interactive", "notebook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation :: Sphinx",
]
dependencies = ["sphinx>=7.0"]

[project.optional-dependencies]
dev = ["pytest", "sphinx", "flit"]
test = ["pytest", "sphinx"]

[project.urls]
Homepage = "https://github.com/tkoyama010/marimo-sphinx"
Repository = "https://github.com/tkoyama010/marimo-sphinx"

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]
